# clip-time-series

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Untitled.ipynb  about_ui.ipynb  environment.yml  export_ui.ipynb  no_ui.ipynb  noxfile.py  pts_generator.ipynb  pyproject.toml  requirements.txt  sepal_environment.yml  solara_app.py  table_ui.ipynb  test.ipynb  test_buffer.geojson  test_pts.geojson  test_squares.geojson  ui.ipynb  ui_conda.ipynb  untilited.ipynb  viz_ui.ipynb
.github/workflows/: ci.yaml  unit.yaml
component/io/: __init__.py  export.py  table_io.py  viz_io.py
component/message/: en.json  test_translation.ipynb
component/message/en/: en.json
component/model/: __init__.py  model_export.py  model_table.py  model_viz.py
component/parameter/: __init__.py  directory.py  gee.py  pdf.py  planet.py  satellites.py  viz.py
component/scripts/: __init__.py  export.py  gdrive.py  gee.py  planet.py  table.py  task_controller.py  utils.py  vizualisation.py
component/tile/: __init__.py  export_tile.py  file_tile.py  viz_tile.py
component/typings/: custom_types.py
component/widget/: __init__.py  custom_alert.py  custom_vector_field.py  id_selection.py
doc/: doc.md  en.rst  es.rst  fr.rst
polygon/: README.md  clip.ipynb  gee.py  parameters.py.dist  scripts.py  utils.py
scripts/: export.py  table.py  vizualisation.py
scripts/annual_time_series/: aa1_prepare_ft_for_gee.py
scripts/utils/: gee.py  messages.py  parameters.py  utils.py
test/: conftest.py  gee_results.py  planet_results.py  test.ipynb  test_export.py  test_gee.py  test_planet.py  test_utils.py
test_data/: clip_test_points.csv
utils/: about.md  clip_test_points.csv  gdrive.py  gee.py  messages.py  parameters.py  utils.py
