[sepal-ui]
init-notebook = "ui.ipynb"

[project]
version = "0.2.0"

[tool.ruff]
ignore-init-module-imports = true
fix = true
select = ["E", "F", "W", "I", "RUF"]
ignore = [
    "E501", # line too long | Black takes care of it
    "D101", # Missing docstring in public class | set it in __init__
]

# init file are here to hide the internal structure to the user of the lib
exclude = ["*/__init__.py"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F403"] # unable to detect undefined names | hide internal strcuture

[tool.commitizen]
version = "0.2.0"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_files = [
    "pyproject.toml:version",
]